--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # GitHub Personal Access Token (optional but recommended for higher rate limits)
 # Create at: https://github.com/settings/tokens
-#VITE_GITHUB_TOKEN=your_github_token_here
+#VITE_GITHUB_TOKEN=your_github_token_here(optional)
 
 # Google Gemini API Key (required for AI analysis)
 # Get at: https://makersuite.google.com/app/apikey
